force-app/main/default/objects/ChildcareFee__c/ChildcareFee__c.object-meta.xml
<CustomObject>
    <label>保育料</label>
    <nameField>
        <displayFormat>CF{YYYY}{MM}-{000}</displayFormat>
        <label>保育料名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>