force-app/main/default/objects/ChildcareFee__c/fields/AbsenceDays__c.field-meta.xml
<CustomField>
    <fullName>AbsenceDays__c</fullName>
    <label>欠席日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>