force-app/main/default/objects/ChildcareFee__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>ImportantNotes__r.AccountName__c</formula>
    <label>口座名</label>
    <type>Text</type>
</CustomField>