force-app/main/default/objects/ChildcareFee__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <formula>ImportantNotes__r.AccountNumber__c</formula>
    <label>口座番号</label>
    <type>Text</type>
</CustomField>