force-app/main/default/objects/ChildcareFee__c/fields/AddressName__c.field-meta.xml
<CustomField>
    <fullName>AddressName__c</fullName>
    <label>宛名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>