force-app/main/default/objects/ChildcareFee__c/fields/AnotherAffiliation__c.field-meta.xml
<CustomField>
    <fullName>AnotherAffiliation__c</fullName>
    <formula>TEXT(ImportantNotes__r.AnotherAffiliation__c)</formula>
    <label>所属の別</label>
    <type>Text</type>
</CustomField>