force-app/main/default/objects/ChildcareFee__c/fields/ApplicationCategory__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCategory__c</fullName>
    <label>申込区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月申込</fullName>
            </value>
            <value>
                <fullName>日申込</fullName>
                <default>true</default>
                <label>日申込</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>