force-app/main/default/objects/ChildcareFee__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <formula>ImportantNotes__r.BankName__c</formula>
    <label>銀行名</label>
    <type>Text</type>
</CustomField>