force-app/main/default/objects/ChildcareFee__c/fields/Belongs__c.field-meta.xml
<CustomField>
    <fullName>Belongs__c</fullName>
    <formula>TEXT(ImportantNotes__r.Belongs__c)</formula>
    <label>所属</label>
    <type>Text</type>
</CustomField>