force-app/main/default/objects/ChildcareFee__c/fields/BusFare__c.field-meta.xml
<CustomField>
    <fullName>BusFare__c</fullName>
    <label>バス代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>