force-app/main/default/objects/ChildcareFee__c/fields/BusFareCheck__c.field-meta.xml
<CustomField>
    <fullName>BusFareCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>バス代有無</label>
    <type>Checkbox</type>
</CustomField>