force-app/main/default/objects/ChildcareFee__c/fields/ChangeFee__c.field-meta.xml
<CustomField>
    <fullName>ChangeFee__c</fullName>
    <label>区分変更手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>