force-app/main/default/objects/ChildcareFee__c/fields/ChangeFeeCheck__c.field-meta.xml
<CustomField>
    <fullName>ChangeFeeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>区分変更手数料有無</label>
    <type>Checkbox</type>
</CustomField>