force-app/main/default/objects/ChildcareFee__c/fields/ChildcareDays__c.field-meta.xml
<CustomField>
    <fullName>ChildcareDays__c</fullName>
    <label>保育日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>