force-app/main/default/objects/ChildcareFee__c/fields/ChildcareFee__c.field-meta.xml
<CustomField>
    <fullName>ChildcareFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>保育料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>