force-app/main/default/objects/ChildcareFee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>園児</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>保育料</relationshipLabel>
    <relationshipName>ChildcareFee_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>