force-app/main/default/objects/ChildcareFee__c/fields/CustodySpring__c.field-meta.xml
<CustomField>
    <fullName>CustodySpring__c</fullName>
    <label>預かり代（春休み）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>