force-app/main/default/objects/ChildcareFee__c/fields/CustodySummer__c.field-meta.xml
<CustomField>
    <fullName>CustodySummer__c</fullName>
    <label>預かり代（夏休み）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>