force-app/main/default/objects/ChildcareFee__c/fields/CustodyWinter__c.field-meta.xml
<CustomField>
    <fullName>CustodyWinter__c</fullName>
    <label>預かり代（冬休み）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>