force-app/main/default/objects/ChildcareFee__c/fields/DailyCustody__c.field-meta.xml
<CustomField>
    <fullName>DailyCustody__c</fullName>
    <label>預かり代（日申込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>