force-app/main/default/objects/ChildcareFee__c/fields/Diapers__c.field-meta.xml
<CustomField>
    <fullName>Diapers__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>オムツ代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>