force-app/main/default/objects/ChildcareFee__c/fields/DiapersCheck__c.field-meta.xml
<CustomField>
    <fullName>DiapersCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>おむつ破棄代有無</label>
    <type>Checkbox</type>
</CustomField>