force-app/main/default/objects/ChildcareFee__c/fields/EducationCosts__c.field-meta.xml
<CustomField>
    <fullName>EducationCosts__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>特別教育費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>