force-app/main/default/objects/ChildcareFee__c/fields/FeeCheck__c.field-meta.xml
<CustomField>
    <fullName>FeeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手数料有無</label>
    <type>Checkbox</type>
</CustomField>