force-app/main/default/objects/ChildcareFee__c/fields/GraduationAlbum__c.field-meta.xml
<CustomField>
    <fullName>GraduationAlbum__c</fullName>
    <label>卒園アルバム費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>