force-app/main/default/objects/ChildcareFee__c/fields/GraduationAlbumCheck__c.field-meta.xml
<CustomField>
    <fullName>GraduationAlbumCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>卒園アルバム費有無</label>
    <type>Checkbox</type>
</CustomField>