force-app/main/default/objects/ChildcareFee__c/fields/ImportantNotes__c.field-meta.xml
<CustomField>
    <fullName>ImportantNotes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>要録情報</label>
    <referenceTo>ImportantNotes__c</referenceTo>
    <relationshipLabel>保育料</relationshipLabel>
    <relationshipName>ChildcareFees</relationshipName>
    <type>Lookup</type>
</CustomField>