force-app/main/default/objects/ChildcareFee__c/fields/IssuingDateOutput__c.field-meta.xml
<CustomField>
    <fullName>IssuingDateOutput__c</fullName>
    <formula>TEXT ( YEAR( TODAY() ))  + &quot;年&quot; +  TEXT ( MONTH( TODAY() ))   + &quot;月&quot; + TEXT ( DAY( TODAY() )) + &quot;日&quot;</formula>
    <label>[出力用]発行日</label>
    <type>Text</type>
</CustomField>