force-app/main/default/objects/ChildcareFee__c/fields/LastMonth__c.field-meta.xml
<CustomField>
    <fullName>LastMonth__c</fullName>
    <formula>TEXT(VALUE( TEXT(Month__c ) ) - 1)</formula>
    <label>[出力用]前月</label>
    <type>Text</type>
</CustomField>