force-app/main/default/objects/ChildcareFee__c/fields/LongStorage__c.field-meta.xml
<CustomField>
    <fullName>LongStorage__c</fullName>
    <label>長期預かり保育</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>