force-app/main/default/objects/ChildcareFee__c/fields/LunchCost__c.field-meta.xml
<CustomField>
    <fullName>LunchCost__c</fullName>
    <defaultValue>3000</defaultValue>
    <label>給食費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>