force-app/main/default/objects/ChildcareFee__c/fields/MonthCustody__c.field-meta.xml
<CustomField>
    <fullName>MonthCustody__c</fullName>
    <label>月の預かり保育</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>