force-app/main/default/objects/ChildcareFee__c/fields/MonthlyCustody__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCustody__c</fullName>
    <label>預かり代（月申込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>