force-app/main/default/objects/ChildcareFee__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <formula>ImportantNotes__r.Number__c</formula>
    <label>園児番号</label>
    <type>Text</type>
</CustomField>