force-app/main/default/objects/ChildcareFee__c/fields/Outside__c.field-meta.xml
<CustomField>
    <fullName>Outside__c</fullName>
    <label>預かり保育</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outside</valueSetName>
    </valueSet>
</CustomField>