force-app/main/default/objects/ChildcareFee__c/fields/OutsideFast__c.field-meta.xml
<CustomField>
    <fullName>OutsideFast__c</fullName>
    <label>朝の預かり保育</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OutsideFast</valueSetName>
    </valueSet>
</CustomField>