force-app/main/default/objects/ChildcareFee__c/fields/PTAFee__c.field-meta.xml
<CustomField>
    <fullName>PTAFee__c</fullName>
    <label>PTA会費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>