force-app/main/default/objects/ChildcareFee__c/fields/Receipt_BusFare__c.field-meta.xml
<CustomField>
    <fullName>Receipt_BusFare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_バス代</label>
    <type>Checkbox</type>
</CustomField>