force-app/main/default/objects/ChildcareFee__c/fields/Receipt_ChangeFee__c.field-meta.xml
<CustomField>
    <fullName>Receipt_ChangeFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_区分変更手数料</label>
    <type>Checkbox</type>
</CustomField>