force-app/main/default/objects/ChildcareFee__c/fields/Receipt_ChildcareFee__c.field-meta.xml
<CustomField>
    <fullName>Receipt_ChildcareFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_保育料</label>
    <type>Checkbox</type>
</CustomField>