force-app/main/default/objects/ChildcareFee__c/fields/Receipt_CustodySpring__c.field-meta.xml
<CustomField>
    <fullName>Receipt_CustodySpring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_預かり代（春休み）</label>
    <type>Checkbox</type>
</CustomField>