force-app/main/default/objects/ChildcareFee__c/fields/Receipt_CustodySummer__c.field-meta.xml
<CustomField>
    <fullName>Receipt_CustodySummer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_預かり代（夏休み）</label>
    <type>Checkbox</type>
</CustomField>