force-app/main/default/objects/ChildcareFee__c/fields/Receipt_CustodyWinter__c.field-meta.xml
<CustomField>
    <fullName>Receipt_CustodyWinter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_預かり代（冬休み）</label>
    <type>Checkbox</type>
</CustomField>