force-app/main/default/objects/ChildcareFee__c/fields/Receipt_Diapers__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Diapers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_おむつ破棄代</label>
    <type>Checkbox</type>
</CustomField>