force-app/main/default/objects/ChildcareFee__c/fields/Receipt_EducationCosts__c.field-meta.xml
<CustomField>
    <fullName>Receipt_EducationCosts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_特別教育費</label>
    <type>Checkbox</type>
</CustomField>