force-app/main/default/objects/ChildcareFee__c/fields/Receipt_Fee__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_手数料</label>
    <type>Checkbox</type>
</CustomField>