force-app/main/default/objects/ChildcareFee__c/fields/Receipt_LunchCost__c.field-meta.xml
<CustomField>
    <fullName>Receipt_LunchCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_給食費</label>
    <type>Checkbox</type>
</CustomField>