force-app/main/default/objects/ChildcareFee__c/fields/Receipt_MonthCustody__c.field-meta.xml
<CustomField>
    <fullName>Receipt_MonthCustody__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_預かり代</label>
    <type>Checkbox</type>
</CustomField>