force-app/main/default/objects/ChildcareFee__c/fields/Receipt_PTAFee__c.field-meta.xml
<CustomField>
    <fullName>Receipt_PTAFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_PTA会費</label>
    <type>Checkbox</type>
</CustomField>