force-app/main/default/objects/ChildcareFee__c/fields/Receipt_SideDishCost__c.field-meta.xml
<CustomField>
    <fullName>Receipt_SideDishCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_副食費</label>
    <type>Checkbox</type>
</CustomField>