force-app/main/default/objects/ChildcareFee__c/fields/Receipt_StapleFoodCost__c.field-meta.xml
<CustomField>
    <fullName>Receipt_StapleFoodCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_主食費</label>
    <type>Checkbox</type>
</CustomField>