force-app/main/default/objects/ChildcareFee__c/fields/Receipt_TeachingMaterials__c.field-meta.xml
<CustomField>
    <fullName>Receipt_TeachingMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_個人持教材</label>
    <type>Checkbox</type>
</CustomField>