force-app/main/default/objects/ChildcareFee__c/fields/Receipt_TotalCost__c.field-meta.xml
<CustomField>
    <fullName>Receipt_TotalCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>領収_費用合計</label>
    <type>Checkbox</type>
</CustomField>