force-app/main/default/objects/ChildcareFee__c/fields/SchoolLunchfree__c.field-meta.xml
<CustomField>
    <fullName>SchoolLunchfree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>副食費免除者</label>
    <type>Checkbox</type>
</CustomField>