force-app/main/default/objects/ChildcareFee__c/fields/SideDishCost2__c.field-meta.xml
<CustomField>
    <fullName>SideDishCost2__c</fullName>
    <label>長期休み副食費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>