force-app/main/default/objects/ChildcareFee__c/fields/SideDishCost__c.field-meta.xml
<CustomField>
    <fullName>SideDishCost__c</fullName>
    <label>副食費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>