force-app/main/default/objects/ChildcareFee__c/fields/StapleFoodCost2__c.field-meta.xml
<CustomField>
    <fullName>StapleFoodCost2__c</fullName>
    <label>長期休み主食費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>