force-app/main/default/objects/ChildcareFee__c/fields/StapleFoodCost__c.field-meta.xml
<CustomField>
    <fullName>StapleFoodCost__c</fullName>
    <label>主食費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>