force-app/main/default/objects/ChildcareFee__c/fields/StoreNumber__c.field-meta.xml
<CustomField>
    <fullName>StoreNumber__c</fullName>
    <formula>ImportantNotes__r.StoreNumber__c</formula>
    <label>店番号</label>
    <type>Text</type>
</CustomField>