force-app/main/default/objects/ChildcareFee__c/fields/TeachingMaterials__c.field-meta.xml
<CustomField>
    <fullName>TeachingMaterials__c</fullName>
    <label>個人持教材</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>