force-app/main/default/objects/ChildcareFee__c/fields/TeachingMaterialsCheck__c.field-meta.xml
<CustomField>
    <fullName>TeachingMaterialsCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>個人持教材有無</label>
    <type>Checkbox</type>
</CustomField>