force-app/main/default/objects/ChildcareFee__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <formula>ChildcareFee__c + EducationCosts__c + PTAFee__c + MonthCustody__c + StapleFoodCost__c + Diapers__c + BusFare__c + TeachingMaterials__c + CustodySpring__c + CustodySummer__c+ CustodyWinter__c + Fee__c + ChangeFee__c + SideDishCost__c + GraduationAlbum__c +  StapleFoodCost2__c +  SideDishCost2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>費用合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>