force-app/main/default/objects/ChildcareFee__c/fields/TransferDateOutput__c.field-meta.xml
<CustomField>
    <fullName>TransferDateOutput__c</fullName>
    <formula>IF(ISBLANK(TransferDate__c),
&quot;※振替日が未設定です。&quot;,
TEXT ( MONTH( TransferDate__c )) + &quot;月&quot; + TEXT ( DAY( TransferDate__c)) + &quot;日&quot;+
CASE(
  MOD(  TransferDate__c  - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;(日)&quot;,
  1, &quot;(月)&quot;,
  2, &quot;(火)&quot;,
  3, &quot;(水)&quot;,
  4, &quot;(木)&quot;,
  5, &quot;(金)&quot;, 
  &quot;(土)&quot;
)

)</formula>
    <label>[出力用]振替日</label>
    <type>Text</type>
</CustomField>