force-app/main/default/objects/ChildcareFee__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <formula>TEXT(Year__c) &amp; &quot;-&quot; &amp; TEXT(Month__c)</formula>
    <label>年月</label>
    <type>Text</type>
</CustomField>